# prescience

./: .envrc  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  devenv.nix
.github/workflows/: ci.yml
proto/stubs/buf/validate/: validate.proto
proto/stubs/google/api/: annotations.proto  http.proto
proto/stubs/protoc-gen-openapiv2/options/: annotations.proto
proto/stubs/validate/: validate.proto
specs/requirements/: 001-rust-spicedb-client.md
src/: error.rs  lib.rs
src/client/: builder.rs  experimental.rs  mod.rs  permissions.rs  schema.rs  watch.rs
src/types/: consistency.rs  context.rs  filter.rs  mod.rs  permission.rs  reference.rs  relationship.rs  token.rs  watch.rs
tests/: integration.rs
